--- a/database/prisma.yml
+++ b/database/prisma.yml
@@ -2,10 +2,12 @@
 #endpoint: ''
 endpoint: https://us1.prisma.sh/alexander-mire-1f45b7/database/dev
 
-
 # Points to the file that holds your data model
 datamodel: datamodel.graphql
 
+hooks:
+  post-deploy:
+    - graphql get-schema --project database
 # You can only access the API when providing JWTs that are signed with this secret
 secret: mysecret123
 
